test/corpus/paragraph.txt
================================================================================
para-00: Basic paragraph including soft break
================================================================================
word word
word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break)
    (word)))

================================================================================
para-01: Paragraph including preceding whitespaces
================================================================================
  word word
     word
    word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break)
    (word)
    (soft_break)
    (word)))

================================================================================
para-02: Soft break with whitespaces
================================================================================
word word   
word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break)
    (word)))

================================================================================
para-03: Paragraph break by multiple newlines
================================================================================
word word
word

word


word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break)
    (word)
    (soft_break))
  (paragraph
    (word)
    (soft_break))
  (paragraph
    (word)))

================================================================================
para-04: Paragraph break by multiple newlines with whitespaces
================================================================================
word word
word   

word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break)
    (word)
    (soft_break))
  (paragraph
    (word)))

================================================================================
para-05: Paragraph break by multiple newlines in standard Attached modifier
================================================================================
word *word

word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (unclosed_bold
      (bold_open)
      (word)
      (soft_break)))
  (paragraph
    (word)
    (punctuation)))

================================================================================
para-06: Paragraph break by Structural Detached modifier
================================================================================
word word
* heading
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break))
  (section
    (heading
      (heading_prefix)
      (paragraph
        (word)))))

================================================================================
para-07: Paragraph break by Detached modifier in standard Attached modifier
================================================================================
*not
* bold*
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (word)
      (soft_break)))
  (section
    (heading
      (heading_prefix)
      (paragraph
        (word)
        (punctuation)))))

================================================================================
para-08: Paragraph break by Detached modifier in verbatim Attached modifier
================================================================================
`not
* verbatim`
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_verbatim
      (verbatim_open)
      (word)
      (soft_break)))
  (section
    (heading
      (heading_prefix)
      (paragraph
        (word)
        (punctuation)))))

================================================================================
para-09: Paragraph break by Nestable Detached modifier
================================================================================
word word
- list
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break))
  (unordered_list
    (unordered_list_item
      (unordered_list_prefix)
      (paragraph
      (word)))))

================================================================================
para-10: Paragraph not break by non detached modifier
================================================================================
word word
~word

word word
~~~~~~
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break)
    (unclosed_strikethrough
      (strikethrough_open)
      (word)
      (soft_break)))
  (paragraph
    (word)
    (whitespace)
    (word)
    (soft_break)
    (punctuation)))

; vim:ts=2:sw=2:nf+=unsigned:
