test/corpus/structural_detached_modifiers.txt
================================================================================
heading-00: hard test
================================================================================
* heading
** heading
*** heading
* heading

paragraph

** heading

** heading
--------------------------------------------------------------------------------
(document
  (section
    heading: (heading
      (heading_prefix)
      (paragraph
        (word)))
    (section
      heading: (heading
        (heading_prefix)
        (paragraph
          (word)))
      (section
        heading: (heading
          (heading_prefix)
          (paragraph
            (word))))))
  (section
    heading: (heading
      (heading_prefix)
      (paragraph
        (word)))
    (paragraph
      (word)
      (soft_break))
    (section
      heading: (heading
        (heading_prefix)
        (paragraph
          (word))))
    (section
      heading: (heading
        (heading_prefix)
        (paragraph
          (word))))))

================================================================================
heading-01: heading after paragraph
================================================================================
paragraph
* heading
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (soft_break))
  (section
    heading: (heading
      (heading_prefix)
      (paragraph
        (word)))))

; TODO: add more tests

; vim:ts=2:sw=2:
